openpracticelibrary/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openpracticelibrary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openpracticelibrary
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: openpracticelibrary
    spec:
      containers:
      - name: openpracticelibrary-container
      - image: quay.io/openpracticelibrary/opl-fe:foo
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: "/opt/app-root/etc/httpd.d"
          name: httpd-conf
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: httpd-conf
        configMap:
          name: httpd-config
          items:
          - key: httpd-conf
            path: "httpd.conf"
      terminationGracePeriodSeconds: 60
