openpracticelibrary/frontend/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: openpracticelibrary-svc
spec:
  ports:
  - name: http
    protocol: "TCP"
    port: 8080
    targetPort: 8080
    nodePort: 0
  selector:
    app: openpracticelibrary
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
